test(api): finish workout service tests